@@ -27,7 +27,7 @@ import java.util.Arrays;
  * Contour dataset where the Z value is the number of points at that particular location.
  */
 public class DensityDataset extends AbstractXYDataset implements ContourDataset
-    {
+{
     int[][] _values;
     double[] _xValues;
     double[] _yValues;
@@ -40,19 +40,19 @@ public class DensityDataset extends AbstractXYDataset implements ContourDataset
      * @param yValues the possible Y values.
      */
     public DensityDataset(XYDataset values, double[] xValues, double[] yValues)
-        {
+    {
         init(values, xValues, yValues);
-        }
+    }
 
     protected void init(XYDataset values, double[] xValues, double[] yValues)
-        {
+    {
         _xValues = xValues;
         _yValues = yValues;
         _values = new int[xValues.length][yValues.length];
         _zMax = 0;
         int count = values.getItemCount(0);
         for (int item = 0; item < count; item ++)
-            {
+        {
             Number xNum = values.getX(0, item);
             Number yNum = values.getY(0, item);
             int x = findBucket(_xValues, xNum.doubleValue());
@@ -60,124 +60,124 @@ public class DensityDataset extends AbstractXYDataset implements ContourDataset
             _values[x][y] ++;
             if (_values[x][y] > _zMax)
                 _zMax = _values[x][y];
-            }
         }
+    }
 
     public int getSeriesCount()
-        {
+    {
         return 1;
-        }
+    }
 
     public String getSeriesKey(int series)
-        {
+    {
         return "First series";
-        }
+    }
 
     public int getItemCount(int series)
-        {
+    {
         return _xValues.length * _yValues.length;
-        }
+    }
 
     public Number getX(int series, int item)
-        {
-        return new Double(_xValues[item / _yValues.length]);
-        }
+    {
+        return Double.valueOf(_xValues[item / _yValues.length]);
+    }
 
     public Number getY(int series, int item)
-        {
-        return new Double(_yValues[item % _yValues.length]);
-        }
+    {
+        return Double.valueOf(_yValues[item % _yValues.length]);
+    }
 
     public double getZValue(int series, int item)
-        {
+    {
         return _values[item / _yValues.length][item % _yValues.length];
-        }
+    }
 
     public double getXValue(int series, int item)
-        {
+    {
         return _xValues[item / _yValues.length];
-        }
+    }
 
     public double getYValue(int series, int item)
-        {
+    {
         return _yValues[item % _yValues.length];
-        }
+    }
 
     public Number getZ(int series, int item)
-        {
+    {
         double Z = getZValue(series, item);
         if (Z == 0)
             return null;
-        return new Double(Z);
-        }
+        return Double.valueOf(Z);
+    }
 
     public double getMinZValue()
-        {
+    {
         return (double) 0;
-        }
+    }
 
     public double getMaxZValue()
-        {
+    {
         return (double) _zMax;
-        }
+    }
 
     public Number[] getYValues()
-        {
+    {
         Number[] ret = new Number[_xValues.length * _yValues.length];
         for (int i = 0; i < ret.length; i ++)
-            {
+        {
             ret[i] = getY(0, i);
-            }
-        return ret;
         }
+        return ret;
+    }
 
     public Number[] getXValues()
-        {
+    {
         Number[] ret = new Number[_xValues.length * _yValues.length];
         for (int i = 0; i < ret.length; i ++)
-            {
+        {
             ret[i] = getX(0, i);
-            }
-        return ret;
         }
+        return ret;
+    }
 
     public Number[] getZValues()
-        {
+    {
         Number[] ret = new Number[_xValues.length * _yValues.length];
         for (int i = 0; i < ret.length; i ++)
-            {
+        {
             ret[i] = getZ(0, i);
-            }
-        return ret;
         }
+        return ret;
+    }
 
     public int[] getXIndices()
-        {
+    {
         int[] ret = new int[_xValues.length];
         for (int i = 0; i < ret.length; i ++)
-            {
+        {
             ret[i] = i * _yValues.length;
-            }
-        return ret;
         }
+        return ret;
+    }
 
     public int[] indexX()
-        {
+    {
         int[] ret = new int[_xValues.length * _yValues.length];
         for (int i = 0; i < ret.length; i ++)
-            {
+        {
             ret[i] = i / _yValues.length;
-            }
-        return ret;
         }
+        return ret;
+    }
 
     public boolean isDateAxis(int axisNumber)
-        {
+    {
         return false;
-        }
+    }
 
     public Range getZValueRange(Range xRange, Range yRange)
-        {
+    {
         int xMin = findBucket(_xValues, xRange.getLowerBound());
         int xMax = findBucket(_xValues, xRange.getUpperBound());
         int yMin = findBucket(_yValues, yRange.getLowerBound());
@@ -185,24 +185,24 @@ public class DensityDataset extends AbstractXYDataset implements ContourDataset
         int zMin = Integer.MAX_VALUE;
         int zMax = Integer.MIN_VALUE;
         for (int x = xMin; x <= xMax; x ++)
-            {
+        {
             for (int y = yMin; y <= yMax; y ++)
-                {
+            {
                 int z = _values[x][y];
                 if (zMin > z)
                     zMin = z;
                 if (zMax < z)
                     zMax = z;
-                }
             }
-        return new Range(zMin, zMax);
         }
+        return new Range(zMin, zMax);
+    }
 
     /**
      * Find the nearest value in the array.
      */
     static public int findBucket(double[] range, double value)
-        {
+    {
         if (value <= range[0])
             return 0;
         if (value >= range[range.length - 1])
@@ -220,14 +220,15 @@ public class DensityDataset extends AbstractXYDataset implements ContourDataset
         if (value - range[guess - 1] < range[guess] - value)
             return guess - 1;
         return guess;
-        }
-    public double[] getPossibleXValues()
-        {
-        return _xValues;
-        }
-    public double[] getPossibleYValues()
-        {
-        return _yValues;
-        }
-
     }
+
+    public double[] getPossibleXValues()
+    {
+        return _xValues;
+    }
+
+    public double[] getPossibleYValues()
+    {
+        return _yValues;
+    }
+}
